--- a/Site web/English/Logbook.html
+++ b/Site web/English/Logbook.html
@@ -49,7 +49,7 @@
         <p class="images-float-left">
             <img src="../images/logbook 2.jpg" alt="jounal de bord" />
         </p>
-        <h2>Meeting 1</h2>
+        <h2>Official Meeting 1</h2>
         <p style="line-height: 25px;">
             Twenty students interested in robotics are spread out across the classroom. This is the first day that everyone has met, both new and old are excited to start the year of robotics. The meeting is opened with the presentations: Karine, our manager, is
             the first to introduce herself, then it’s the turn of the elders and finally the new arrivals close the presentations. Alexandra, our captain, explains what CRC is. She presents all the components, namely the robot, the video, the kiosk, the
@@ -58,14 +58,14 @@
             The elders specify, the evening is not over, all have not yet seen the local. Loudly, we move to said room. The tour is quickly done, it's a small and messy place. Co-captain Charles presents the robot from the previous year. The meeting ends
             with this presentation, the next meeting will take place in two weeks.
         </p>
-        <h2>Meeting 2</h2>
+        <h2>Official Meeting 2</h2>
         <p style="line-height: 25px;">
             It was decided that the meeting should primarily serve to dismantle the robot from last year. All new members are therefore invited to learn the basic mechanisms mainly used in Montmorency. Charles and Jérémy present a short course on materials, tools
             and ways of doing things. The new ones ask a lot of questions about the constitution of the robot, why certain materials were used rather than others. Some of the alternatives they presented in their questions made a lot of sense, they even
             came up with solutions that we hadn't thought of before. The embarrassment of not being able to answer their questions was greatly overcome by the pride of having new strengths in our team. Robotics was a passion shared by all. A few hours
             later, the robot was completely analyzed and dismantled. Everyone was finally able to return home.
         </p>
-        <h2>Meeting 3</h2>
+        <h2>Official Meeting 3</h2>
         <p style="line-height: 25px;">
             Following the first meeting, the 2019-2020 theme had still not been decided, so was finally time to put it back on the agenda. Alexandra had prepared her top 5 videos from the previous year, as well as a video montage of the kiosks to open the meeting
             and demonstrate the importance of the choice of theme. It was then noticed that some videos are very simple, yet excellent, complex videos are just as much. The complexity of the video is therefore not a determining factor, it is possible
@@ -73,20 +73,107 @@
             while others are recurrent, some are realistic while others are impracticable. After a while, three highly appreciated themes emerge from all the others, namely Nemo, Escape Room and Inside Out. In order to involve as many people as possible
             in the decision, the vote on the final theme will be between these three ideas on the Facebook group of the robotics club.
         </p>
-
         <p class="images-float-right">
             <img src="../images/logbook 1.jpg" alt="jounal de bord" />
         </p>
-        <h2>Meeting 4</h2>
+        <h2>Official Meeting 4</h2>
         <p style="line-height: 25px;">
             Since a few days, the choice of theme seemed to be clear, the next step was to formalize it. It is therefore with pleasure that Alexandra announces that the theme of Montmorency in 2019-2020 will be Inside Out. Everyone seems satisfied with this choice.
             Chaos does not take long, everyone has ideas and wants to talk to their neighbor. It’s only after about 30 minutes that the captain requests the return of order, it’s time to present ideas. Benjamin and Alexandra open the ball, armed with
-            pencils they explain their idea of raised floor on the board. This idea is not unanimous, but everyone agrees on its potential. A platform would allow us to differentiate ourselves from other teams and challenge ourselves. The raised floor
+            pencils they explain their idea of ​​raised floor on the board. This idea is not unanimous, but everyone agrees on its potential. A platform would allow us to differentiate ourselves from other teams and challenge ourselves. The raised floor
             would also allow to circulate below the floor colored balls, they would be visible below our feet at certain sections of the platform which would be built in thick Lexan. Olivier suggests that the mechanism used to transport the balls should
             be a pneumatic system. Charles and Alexandra have doubts, a pneumatic system of this magnitude would require advance preparation. Working in advance has never been a strength of Montmorency, maybe it will change this year? Chloé proposes to
             make a control panel like in the film, it could also be interactive. Benjamin proposes to pass a train over the walls. The board was gradually filling with sketches of kiosks and lists of ideas. There were plenty of ideas. The board is photographed,
             then shared on the Facebook group. Each of us could now go back to their houses.
         </p>
+        <h2>Official Meeting 5</h2>
+        <p style="line-height: 25px;">
+            October 23rd 2020, two days following the preliminary documents release. The competition is slowly starting to get clearer. We have a theme, way too many kiosk ideas, new recruits… All that’s left is learn about the game before starting to build the robot.
+            Alexandra starts by explaining what’s the kick off and that the participants that will be assisting it. We settle on displaying the rules on a projector. The students suddenly seem hypnotized by the contents of the board. Although, for most
+            of them, it’s the first time they see a CRC document. 60 pages, that’s pretty long. We go over the foreword and the introduction quickly, we take note of the dates, we discover our adversaries and we look at the game section. The black spots
+            redacting the important parts are more than frustrating. We try nonetheless our best to decode the text. We still speculate on the game. It becomes obvious that the robots will have to interact with many obstacles that will have different
+            effects on the round. We also notice that the copilots will play a big part this year. Perhaps the pilot will have a handicap of some kind? At that point, the team thinks they have drawn all that they can from the preliminary rules. There
+            is no shortage of theories about the game, two people are already on the board to sketch arenas and robots. On a piece of paper, the relevant questions that erupted in our reading were noted. These may help us better understand the rules once
+            the final version is published.
+        </p>
+        <h2>Official Meeting 6</h2>
+        <p style="line-height: 25px;">
+            Once the theme of the year has been chosen, it is imperative that we take an evening to watch the movie. Once everyone has arrived in the classroom, we discuss what is important to note during the film. The points to remember are therefore the important
+            elements, the elements that caught our attention and the sets that particularly interested us. So we sit comfortably in the room, then start the film. During the film, the pencils are out of control. At the end, we share our ideas. The significant
+            elements retained at the level of the landscape are the presence of the balls of memories throughout the film, the personality islands that are part of Riley's memory and the panel of the control center. The important events noted were the
+            attempt to escape into the train of ideas, the fall of Sadness and Joy in the memory and the possibility of having memories containing more than one emotion. Charles takes a picture of all the points noted on the board and the meeting ends
+            on this. Everyone goes home with their heads full of ideas.
+        </p>
+        <h2>Official Meeting 7</h2>
+        <p style="line-height: 25px;">
+            We are at the last meeting before the Kick Off. In today’s meeting, we need to clarify who will be working on which aspect of the competition. We separated the disciplines as initially presented during the first meeting, namely the robot, the video, the
+            kiosk, the website, the programming and the creation of the T-Shirts. Content from the website has also been added. In the classroom everyone discusses the time they think they can allocate to robotics work through the session. Depending on
+            the time available and interests the boxes under the different disciplines are gradually filling with names. The video seems to wow very few people, because there are only 3 names registered. Chloé explains what the video consists of: script
+            design, set design, character play, sound, recording and editing. There is more dimension to creating a video than what you see in front of the camera. Everyone seems to find their account, the video section is quickly filled. </p>
+        <h2>Kick-Off</h2>
+        <p style="line-height: 25px;">
+            Following the kick off, the meetings take place differently. Instead of being formal organized meetings, meetings become scattered, the only participants of which are the people concerned with the purpose of the meeting.
+        </p>
+        <p class="images-float-left">
+            <img src="../images/robot pas mal fini avec lexan.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Robot</h2>
+        <p style="line-height: 25px;">
+            The robotics team did not wait long before getting into action. From the beginning of the first week, all the members came up with many ideas for building the robot. The final design is based on the design of a different system for each obstacle. Following
+            this discussion, the team was able to embark on the construction of the robot’s base and its electronics so that it could move, but also so that the team could start testing it. The second week went wonderfully. With a functional base the
+            team settled on the idea of mushroom buttons. The system was quickly designed and installed on the robot, however it still had problems that began to be fixed. Subsequently, in the same week we started a prototype electoral sign of the system
+            for making the chained ball which is a two-in-one system since it would make it possible to do the articulated board as well. The third week was the most productive week. The team was able to successfully complete the mushroom button system.
+            The system had the ability to tackle both obstacles as originally planned. The ark system was invented and built the same week. Among all the systems on the robot, this is the system that the whole team finds most ridiculous. During the week
+            we installed a switch to stop the arm of the mushroom button system in the correct position. The fourth week started slower than the others because of the many exams the team had to revise. However, that didn't stop the team from finishing
+            the construction of the robot. At the end of the week the team cleaned up the system for the ball chained with lexan and the system for the tornado began to be built. The fifth week put an end to the robot since we finished building the tornado
+            and we then made protective plates all around the robot to protect all the systems inside. The team was very proud to have finished a robot two weeks before Christmas, but their dedication to the robot did not stop there. During the Christmas
+            holidays and even after the holidays, the team adjusted all the wires of all the systems, strengthened the systems and the motors which were part of it and made team flags operating with lights and changeable with a switch . Even today, the
+            team is working and testing the robot tirelessly so that on the day of the competition, the robot will be at its best.
+        </p>
+        <p class="images-float-right">
+            <img src="../images/Recordeur ancien logbook.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Video</h2>
+        <p style="line-height: 25px;">
+            The video required a lot of discussion before starting the script to make sure that everyone was happy with the story. Following the Kick Off, the first two weeks were used for discussion between different members. Once she had an idea of what to do,
+            Chloé was able to start writing the script based on the rules and what the rest of the team said. The script was completed shortly before Christmas, Charles was the first to check it. Following his comments, Chloé was able to correct some
+            of the transitions between the scenes that were not sufficiently explicit. Shortly after Christmas, it was possible to start buying the materials for the decorations and costumes. Subsequently, we were finally able to start filming. The filming
+            took longer than expected. The reasons for this delay were numerous, for example a lack of coordination of the entire team of actors and sound / camera, the entire equipment had not been rented, actors having a laugh, management of shots with
+            the camera that had not been entered in the script, etc. A sense of urgency was gradually mounting among those responsible for the video. Despite the setbacks, the entire video was filmed, the last scene was not filmed until the day before
+            the handover date. The editing therefore started at the same time as the end of the filming, in order to optimize the time available.
+        </p>
+        <p class="images-float-left">
+            <img src="../images/journal de bord kiosque 2.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Kiosk</h2>
+        <p style="line-height: 25px;">
+            The first week served exclusively to find ideas, having the theme Inside out in mind everything seemed possible. The ideas were numerous, they ranged from a 1.5m high floor, to a transparent floor with a train crossing from edge to edge of the kiosk carrying
+            balls of illuminated emotions, to clouds and islands of emotions. Then in the first weeks, the ideas slowly took shape and finally we decided to make a kiosk only 1 ½ feet high and put a full floor because the lexan was too expensive. We then
+            started to draw plans for the kiosk and it was decided to paint the walls in purple, paint islands representing various personalities and put a control board like the one in the movie. Olivier and Charles started programming bright LED strips,
+            which announce the emotions, as well as a train which will go around the structure. The fourth week following the Kick Off allowed us to start the construction of the walls. Mikhaël surprised the entire robotics team with his carpentry talents.
+            After building the entire floor pallets, it was decided not to use them and to build the kiosk directly on the floor. We did this for several reasons such as logistics, financial capacity and because of how impractical it would have been.
+            After the floor dilemma, the walls were painted, then pink arches were painted on the back wall. Our painter, Elyanna, was able to start painting the islands of personalities. These islands represent important values ​​of the robotics club,
+            namely robotics, imagination and learning.
+        </p>
+        <p class="images-float-right">
+            <img src="../images/journal de bord.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Website</h2>
+        <p style="line-height: 25px;">
+            The first week, the people in charge of programming the website began learning programming bases on HTML and CSS. Programming was a whole new area for them, they had never programmed in their lives. A friend’s lecture notes in computer technology and
+            some youtube videos were the sources of the website team. For a few weeks, a lot of experimentation was done and the website slowly started taking form. About a week before the handover, a lot of journalism material started to go out and the
+            photobooth of the students and mentors was done. Once the programming was finished, Benjamin helped with the visual of the site and the images. The programmers were able to look back at their old code, fix some bugs and tweak some parameters,
+            which they could not have done without the knowledge acquired during the semester. Many times the site didn't work and no one knew why, but sometimes it worked without anyone understanding why. After receiving the majority of photos and personalized
+            texts from each student, the site went live on January 26 at around 7:30 am, however, the home page did not work and there were problems with the members page. The issues were resolved on the 27th, the day of the handover.
+        </p>
+        <h2>T-shirt</h2>
+        <p style="line-height: 25px;">
+            This year, the robotics club was self-sufficient in the creation of its t-shirts. Alexandra had a Silhouette cutter at home and the robotics club purchased an easy Cricut press to use as an iron and paste the vinyl on the sweater. Alexandra and Charles
+            spent a lot of time trying to understand the machine and how to use the drawing software. Over the course of two weeks many experiments were carried out and two designs emerged. Also, the robotics club offered other teams on Manager to print
+            their t-shirts to help young teams reduce their costs. We eagerly await responses.
+        </p>
+
+
     </div>
 
 
