nom de famille ely

--- a/Site web/English/Members.html
+++ b/Site web/English/Members.html
@@ -180,7 +180,7 @@
             <div id="membres">
                 <img src="../images/membre 6.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Elyanna
+            <h2> Elyanna Gauthier
             </h2>
             <p>
                 Joining the robotic club was a breath of fresh air this year. These people became my family and helped me to grow up. Being part of the robotic club gave me the courage to showcase my talents and, in return, I received a lot of gratitude. A special thanks
