--- a/Site web/English/Home page.html
+++ b/Site web/English/Home page.html
@@ -73,7 +73,7 @@
             Video
         </h2>
         <video controls>
-            <source src="../images/" type="video/mp4">
+            <source src="../images/Video Montmorency.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
           </video>
@@ -81,7 +81,7 @@
             Tutorial
         </h2>
         <video controls>
-            <source src="../images/" type="video/mp4">
+            <source src="../images/Tutoriel Montmorency 2020.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
           </video>
