--- a/Site web/Francais/Page principale.html
+++ b/Site web/Francais/Page principale.html
@@ -75,7 +75,7 @@
             Vidéo
         </h2>
         <video controls>
-            <source src="../images/" type="video/mp4">
+            <source src="../images/Video Montmorency 2020.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
           </video>
@@ -83,7 +83,7 @@
             Tutoriel
         </h2>
         <video controls>
-            <source src="../images/" type="video/mp4">
+            <source src="../images/Tutoriel Montmorency 2020.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
           </video>
